fixes overlap and focus issues

--- a/client/stylesheets/filter.import.styl
+++ b/client/stylesheets/filter.import.styl
@@ -112,7 +112,7 @@
   position absolute
   left 50px
   top 10px
-  z-index 200
+  z-index 100
   max-width 400px
   min-width 25%
   border-radius 5px
