--- a/client/stylesheets/header.import.styl
+++ b/client/stylesheets/header.import.styl
@@ -1,6 +1,6 @@
 header
   position relative
-  z-index 100
+  z-index 200
 .navbar
   @extend .dark-shadow
   margin-bottom 0
