--- a/client/stylesheets/maps.import.styl
+++ b/client/stylesheets/maps.import.styl
@@ -49,6 +49,9 @@ arrow-height = (arrow-width / 2)
 .leaflet-bar
   box-shadow 0 1px 5px rgba(0,0,0,0.3)
 
+.leaflet-top, .leaflet-bottom
+  z-index 100
+
 .leaflet-bar a, .leaflet-bar a:hover
   background rgba(255,255,255,.8)
 
